--- a/style.css
+++ b/style.css
@@ -41,6 +41,6 @@ main {
     align-items: center;
     width: 100%;
     height: 100%;
-    padding: 60px 10px;
+    padding: 60px clamp(12px, 3vw, 20px);
     box-sizing: border-box;
 }
